// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`financial report query optimization preserves all totals > preserves the complete report for all 1`] = `
{
  "cogsTjs": 3282164.1,
  "cogsUsd": 328216.41,
  "expensesTjs": 24680.00000000026,
  "expensesUsd": 2460,
  "freeDeviceBonusesInStock": 1,
  "giftDeviceProfitTjs": 615246,
  "giftDeviceProfitUsd": 61524.6,
  "giftDeviceUnitsSold": 205,
  "grossMarginPercent": 40.8,
  "grossProfitTjs": 2258051.1,
  "grossProfitUsd": 225805.11,
  "mainWarehouseCashTjs": 345.67,
  "mainWarehouseCashUsd": 34.57,
  "mainWarehouseStockCostTjs": 1000.1,
  "mainWarehouseStockCostUsd": 100.01,
  "mainWarehouseStockCount": 2,
  "modelCounts": [
    {
      "cogsUsd": 46802.340000000026,
      "count": 264,
      "name": "Phone M2",
      "profitUsd": 32429.340000000084,
      "revenueUsd": 79231.68000000004,
    },
    {
      "cogsUsd": 46802.340000000026,
      "count": 264,
      "name": "Phone M4",
      "profitUsd": 32429.340000000084,
      "revenueUsd": 79231.68000000004,
    },
    {
      "cogsUsd": 46602.33000000002,
      "count": 263,
      "name": "Phone M6",
      "profitUsd": 32329.23000000008,
      "revenueUsd": 78931.56000000004,
    },
    {
      "cogsUsd": 47002.35000000003,
      "count": 264,
      "name": "Phone M3",
      "profitUsd": 32229.330000000085,
      "revenueUsd": 79231.68000000004,
    },
    {
      "cogsUsd": 47002.35000000003,
      "count": 264,
      "name": "Phone M0",
      "profitUsd": 32229.330000000085,
      "revenueUsd": 79231.68000000004,
    },
    {
      "cogsUsd": 47002.35000000003,
      "count": 264,
      "name": "Phone M1",
      "profitUsd": 32229.33000000008,
      "revenueUsd": 79231.68000000004,
    },
    {
      "cogsUsd": 47002.35000000003,
      "count": 263,
      "name": "Phone M5",
      "profitUsd": 31929.210000000083,
      "revenueUsd": 78931.56000000004,
    },
  ],
  "netProfitTjs": 2235520.3,
  "netProfitUsd": 223560.03,
  "periodCashBonusesTjs": 255,
  "periodCashBonusesUsd": 25.5,
  "periodFreeDeviceBonusesReceived": 1,
  "periodRefundPenaltiesTjs": 1894.2,
  "periodRefundPenaltiesUsd": 189.42,
  "profitTjs": 2259945.3,
  "profitUsd": 225994.53,
  "revenueTjs": 5540215.2,
  "revenueUsd": 554021.52,
  "salesCount": 1846,
  "storeBreakdown": [
    {
      "cashTjs": 1001,
      "cogsTjs": 166008.3,
      "cogsUsd": 16600.83,
      "profitTjs": 113189.4,
      "profitUsd": 11318.94,
      "revenueTjs": 279111.6,
      "revenueUsd": 27911.16,
      "salesCount": 93,
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-1",
      "storeName": "Store 1",
      "unitsSold": 93,
    },
    {
      "cashTjs": 1002,
      "cogsTjs": 166008.3,
      "cogsUsd": 16600.83,
      "profitTjs": 113189.4,
      "profitUsd": 11318.94,
      "revenueTjs": 279111.6,
      "revenueUsd": 27911.16,
      "salesCount": 93,
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-2",
      "storeName": "Store 2",
      "unitsSold": 93,
    },
    {
      "cashTjs": 1007,
      "cogsTjs": 166008.3,
      "cogsUsd": 16600.83,
      "profitTjs": 113189.4,
      "profitUsd": 11318.94,
      "revenueTjs": 279111.6,
      "revenueUsd": 27911.16,
      "salesCount": 93,
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-7",
      "storeName": "Store 7",
      "unitsSold": 93,
    },
    {
      "cashTjs": 1008,
      "cogsTjs": 166008.3,
      "cogsUsd": 16600.83,
      "profitTjs": 113189.4,
      "profitUsd": 11318.94,
      "revenueTjs": 279111.6,
      "revenueUsd": 27911.16,
      "salesCount": 93,
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-8",
      "storeName": "Store 8",
      "unitsSold": 93,
    },
    {
      "cashTjs": 1014,
      "cogsTjs": 166008.3,
      "cogsUsd": 16600.83,
      "profitTjs": 113189.4,
      "profitUsd": 11318.94,
      "revenueTjs": 279111.6,
      "revenueUsd": 27911.16,
      "salesCount": 93,
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-14",
      "storeName": "Store 14",
      "unitsSold": 93,
    },
    {
      "cashTjs": 1015,
      "cogsTjs": 166008.3,
      "cogsUsd": 16600.83,
      "profitTjs": 113189.4,
      "profitUsd": 11318.94,
      "revenueTjs": 279111.6,
      "revenueUsd": 27911.16,
      "salesCount": 93,
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-15",
      "storeName": "Store 15",
      "unitsSold": 93,
    },
    {
      "cashTjs": 1000,
      "cogsTjs": 162008.1,
      "cogsUsd": 16200.81,
      "profitTjs": 114200.7,
      "profitUsd": 11420.07,
      "revenueTjs": 276110.4,
      "revenueUsd": 27611.04,
      "salesCount": 92,
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-0",
      "storeName": "Store 0",
      "unitsSold": 92,
    },
    {
      "cashTjs": 1003,
      "cogsTjs": 162008.1,
      "cogsUsd": 16200.81,
      "profitTjs": 114200.7,
      "profitUsd": 11420.07,
      "revenueTjs": 276110.4,
      "revenueUsd": 27611.04,
      "salesCount": 92,
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-3",
      "storeName": "Store 3",
      "unitsSold": 92,
    },
    {
      "cashTjs": 1004,
      "cogsTjs": 164008.2,
      "cogsUsd": 16400.82,
      "profitTjs": 112200.6,
      "profitUsd": 11220.06,
      "revenueTjs": 276110.4,
      "revenueUsd": 27611.04,
      "salesCount": 92,
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-4",
      "storeName": "Store 4",
      "unitsSold": 92,
    },
    {
      "cashTjs": 1005,
      "cogsTjs": 164008.2,
      "cogsUsd": 16400.82,
      "profitTjs": 112200.6,
      "profitUsd": 11220.06,
      "revenueTjs": 276110.4,
      "revenueUsd": 27611.04,
      "salesCount": 92,
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-5",
      "storeName": "Store 5",
      "unitsSold": 92,
    },
    {
      "cashTjs": 1006,
      "cogsTjs": 162008.1,
      "cogsUsd": 16200.81,
      "profitTjs": 114200.7,
      "profitUsd": 11420.07,
      "revenueTjs": 276110.4,
      "revenueUsd": 27611.04,
      "salesCount": 92,
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-6",
      "storeName": "Store 6",
      "unitsSold": 92,
    },
    {
      "cashTjs": 1009,
      "cogsTjs": 162008.1,
      "cogsUsd": 16200.81,
      "profitTjs": 114200.7,
      "profitUsd": 11420.07,
      "revenueTjs": 276110.4,
      "revenueUsd": 27611.04,
      "salesCount": 92,
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-9",
      "storeName": "Store 9",
      "unitsSold": 92,
    },
    {
      "cashTjs": 1010,
      "cogsTjs": 164008.2,
      "cogsUsd": 16400.82,
      "profitTjs": 112200.6,
      "profitUsd": 11220.06,
      "revenueTjs": 276110.4,
      "revenueUsd": 27611.04,
      "salesCount": 92,
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-10",
      "storeName": "Store 10",
      "unitsSold": 92,
    },
    {
      "cashTjs": 1011,
      "cogsTjs": 164008.2,
      "cogsUsd": 16400.82,
      "profitTjs": 112200.6,
      "profitUsd": 11220.06,
      "revenueTjs": 276110.4,
      "revenueUsd": 27611.04,
      "salesCount": 92,
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-11",
      "storeName": "Store 11",
      "unitsSold": 92,
    },
    {
      "cashTjs": 1012,
      "cogsTjs": 164008.2,
      "cogsUsd": 16400.82,
      "profitTjs": 112200.6,
      "profitUsd": 11220.06,
      "revenueTjs": 276110.4,
      "revenueUsd": 27611.04,
      "salesCount": 92,
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-12",
      "storeName": "Store 12",
      "unitsSold": 92,
    },
    {
      "cashTjs": 1013,
      "cogsTjs": 164008.2,
      "cogsUsd": 16400.82,
      "profitTjs": 112200.6,
      "profitUsd": 11220.06,
      "revenueTjs": 276110.4,
      "revenueUsd": 27611.04,
      "salesCount": 92,
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-13",
      "storeName": "Store 13",
      "unitsSold": 92,
    },
    {
      "cashTjs": 1016,
      "cogsTjs": 164008.2,
      "cogsUsd": 16400.82,
      "profitTjs": 112200.6,
      "profitUsd": 11220.06,
      "revenueTjs": 276110.4,
      "revenueUsd": 27611.04,
      "salesCount": 92,
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-16",
      "storeName": "Store 16",
      "unitsSold": 92,
    },
    {
      "cashTjs": 1017,
      "cogsTjs": 164008.2,
      "cogsUsd": 16400.82,
      "profitTjs": 112200.6,
      "profitUsd": 11220.06,
      "revenueTjs": 276110.4,
      "revenueUsd": 27611.04,
      "salesCount": 92,
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-17",
      "storeName": "Store 17",
      "unitsSold": 92,
    },
    {
      "cashTjs": 1018,
      "cogsTjs": 162008.1,
      "cogsUsd": 16200.81,
      "profitTjs": 114200.7,
      "profitUsd": 11420.07,
      "revenueTjs": 276110.4,
      "revenueUsd": 27611.04,
      "salesCount": 92,
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-18",
      "storeName": "Store 18",
      "unitsSold": 92,
    },
    {
      "cashTjs": 1019,
      "cogsTjs": 164008.2,
      "cogsUsd": 16400.82,
      "profitTjs": 112200.6,
      "profitUsd": 11220.06,
      "revenueTjs": 276110.4,
      "revenueUsd": 27611.04,
      "salesCount": 92,
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-19",
      "storeName": "Store 19",
      "unitsSold": 92,
    },
  ],
  "topSuppliersByDebt": [
    {
      "id": "supplier",
      "name": "Supplier",
      "totalDebtUsd": 123.45,
      "totalPaidUsd": 76.55,
      "totalPurchasedUsd": 200,
    },
  ],
  "totalSupplierDebtTjs": 1234.5,
  "totalSupplierDebtUsd": 123.45,
  "unitsSold": 1846,
}
`;

exports[`financial report query optimization preserves all totals > preserves the complete report for store-0 1`] = `
{
  "cogsTjs": 162008.1,
  "cogsUsd": 16200.81,
  "expensesTjs": 1233.9999999999993,
  "expensesUsd": 123,
  "freeDeviceBonusesInStock": 1,
  "giftDeviceProfitTjs": 33013.2,
  "giftDeviceProfitUsd": 3301.32,
  "giftDeviceUnitsSold": 11,
  "grossMarginPercent": 41.3,
  "grossProfitTjs": 114102.30000000002,
  "grossProfitUsd": 11410.23,
  "mainWarehouseCashTjs": 345.67,
  "mainWarehouseCashUsd": 34.57,
  "mainWarehouseStockCostTjs": 1000.1,
  "mainWarehouseStockCostUsd": 100.01,
  "mainWarehouseStockCount": 2,
  "modelCounts": [
    {
      "cogsUsd": 2400.12,
      "count": 14,
      "name": "Phone M6",
      "profitUsd": 1801.5599999999995,
      "revenueUsd": 4201.679999999999,
    },
    {
      "cogsUsd": 2200.1099999999997,
      "count": 13,
      "name": "Phone M3",
      "profitUsd": 1701.4499999999998,
      "revenueUsd": 3901.559999999999,
    },
    {
      "cogsUsd": 2200.1099999999997,
      "count": 13,
      "name": "Phone M5",
      "profitUsd": 1701.4499999999996,
      "revenueUsd": 3901.559999999999,
    },
    {
      "cogsUsd": 2200.1099999999997,
      "count": 13,
      "name": "Phone M1",
      "profitUsd": 1701.4499999999996,
      "revenueUsd": 3901.559999999999,
    },
    {
      "cogsUsd": 2400.12,
      "count": 13,
      "name": "Phone M4",
      "profitUsd": 1501.4399999999996,
      "revenueUsd": 3901.559999999999,
    },
    {
      "cogsUsd": 2400.12,
      "count": 13,
      "name": "Phone M2",
      "profitUsd": 1501.4399999999996,
      "revenueUsd": 3901.559999999999,
    },
    {
      "cogsUsd": 2400.12,
      "count": 13,
      "name": "Phone M0",
      "profitUsd": 1501.4399999999996,
      "revenueUsd": 3901.559999999999,
    },
  ],
  "netProfitTjs": 112966.7,
  "netProfitUsd": 11297.07,
  "periodCashBonusesTjs": 0,
  "periodCashBonusesUsd": 0,
  "periodFreeDeviceBonusesReceived": 1,
  "periodRefundPenaltiesTjs": 98.4,
  "periodRefundPenaltiesUsd": 9.84,
  "profitTjs": 114200.7,
  "profitUsd": 11420.07,
  "revenueTjs": 276110.4,
  "revenueUsd": 27611.04,
  "salesCount": 92,
  "storeBreakdown": [
    {
      "cashTjs": 1000,
      "cogsTjs": 162008.1,
      "cogsUsd": 16200.81,
      "profitTjs": 114200.7,
      "profitUsd": 11420.07,
      "revenueTjs": 276110.4,
      "revenueUsd": 27611.04,
      "salesCount": 92,
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-0",
      "storeName": "Store 0",
      "unitsSold": 92,
    },
  ],
  "topSuppliersByDebt": [
    {
      "id": "supplier",
      "name": "Supplier",
      "totalDebtUsd": 123.45,
      "totalPaidUsd": 76.55,
      "totalPurchasedUsd": 200,
    },
  ],
  "totalSupplierDebtTjs": 1234.5,
  "totalSupplierDebtUsd": 123.45,
  "unitsSold": 92,
}
`;

exports[`financial report query optimization preserves all totals > preserves the complete report for store-1 1`] = `
{
  "cogsTjs": 166008.3,
  "cogsUsd": 16600.83,
  "expensesTjs": 1233.9999999999993,
  "expensesUsd": 123,
  "freeDeviceBonusesInStock": 1,
  "giftDeviceProfitTjs": 30012,
  "giftDeviceProfitUsd": 3001.2,
  "giftDeviceUnitsSold": 10,
  "grossMarginPercent": 40.5,
  "grossProfitTjs": 113103.29999999999,
  "grossProfitUsd": 11310.33,
  "mainWarehouseCashTjs": 345.67,
  "mainWarehouseCashUsd": 34.57,
  "mainWarehouseStockCostTjs": 1000.1,
  "mainWarehouseStockCostUsd": 100.01,
  "mainWarehouseStockCount": 2,
  "modelCounts": [
    {
      "cogsUsd": 2400.12,
      "count": 14,
      "name": "Phone M0",
      "profitUsd": 1801.5599999999995,
      "revenueUsd": 4201.679999999999,
    },
    {
      "cogsUsd": 2200.1099999999997,
      "count": 13,
      "name": "Phone M5",
      "profitUsd": 1701.4499999999998,
      "revenueUsd": 3901.559999999999,
    },
    {
      "cogsUsd": 2200.1099999999997,
      "count": 13,
      "name": "Phone M4",
      "profitUsd": 1701.4499999999998,
      "revenueUsd": 3901.559999999999,
    },
    {
      "cogsUsd": 2600.13,
      "count": 14,
      "name": "Phone M1",
      "profitUsd": 1601.5499999999995,
      "revenueUsd": 4201.679999999999,
    },
    {
      "cogsUsd": 2400.12,
      "count": 13,
      "name": "Phone M6",
      "profitUsd": 1501.4399999999996,
      "revenueUsd": 3901.559999999999,
    },
    {
      "cogsUsd": 2400.12,
      "count": 13,
      "name": "Phone M3",
      "profitUsd": 1501.4399999999996,
      "revenueUsd": 3901.559999999999,
    },
    {
      "cogsUsd": 2400.12,
      "count": 13,
      "name": "Phone M2",
      "profitUsd": 1501.4399999999996,
      "revenueUsd": 3901.559999999999,
    },
  ],
  "netProfitTjs": 111955.4,
  "netProfitUsd": 11195.94,
  "periodCashBonusesTjs": 0,
  "periodCashBonusesUsd": 0,
  "periodFreeDeviceBonusesReceived": 1,
  "periodRefundPenaltiesTjs": 86.1,
  "periodRefundPenaltiesUsd": 8.61,
  "profitTjs": 113189.4,
  "profitUsd": 11318.94,
  "revenueTjs": 279111.6,
  "revenueUsd": 27911.16,
  "salesCount": 93,
  "storeBreakdown": [
    {
      "cashTjs": 1001,
      "cogsTjs": 166008.3,
      "cogsUsd": 16600.83,
      "profitTjs": 113189.4,
      "profitUsd": 11318.94,
      "revenueTjs": 279111.6,
      "revenueUsd": 27911.16,
      "salesCount": 93,
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-1",
      "storeName": "Store 1",
      "unitsSold": 93,
    },
  ],
  "topSuppliersByDebt": [
    {
      "id": "supplier",
      "name": "Supplier",
      "totalDebtUsd": 123.45,
      "totalPaidUsd": 76.55,
      "totalPurchasedUsd": 200,
    },
  ],
  "totalSupplierDebtTjs": 1234.5,
  "totalSupplierDebtUsd": 123.45,
  "unitsSold": 93,
}
`;
